--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,17 @@
-/* put custom styles in this file */
+h1 {
+  margin-top: 100px;
+  text-align: center;
+  font-size: 40px;
+  font-style: italic, Arial;
+  background-color: skyblue;
+
+}
+body {
+  background-color: grey;
+}
+
+
+
+#loading {
+  display: none;
+}
