working album and song search

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
 /* put custom styles in this file */
+.album:hover{
+	cursor: pointer;
+}
+div.col-md-4:hover{
+}
+#result{
+	margin-bottom: 80px;
+}
+.red{
+	color: red;
+}
