--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
 /* put custom styles in this file */
+
+
+
+.album-cover {
+  float:left;
+}
+
+.result {
+  border: solid;
+}
+
+.btn-play {
+  float:left;
+}
+
+.right-result{
+  float:left;
+  background-color: grey;
+}
