--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,16 @@
 /* put custom styles in this file */
+body {
+  background-color: #0e0f0f;
+}
+
+h1.text-center {
+  color: white;
+}
+#query {
+  background-color: #272c2d;
+  color: white;
+}
+
+p {
+  color: white;
+}
