--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,12 @@
 .album:hover{
 	cursor: pointer;
 }
+.album{
+	height: 100%;
+	width: 100%;
+}
 .result{
-	margin-bottom: 80px;
+	margin-bottom: 60px;
 }
 .red{
 	color: red;
@@ -23,4 +27,11 @@ input[type=submit]{
 }
 .tracks{
 	height: 80px;
+}
+div.row{
+	display: inline;
+}
+body{
+	background-size: 100% 100%
+	background: fixed;
 }
