added preview links but need to change the nesting order

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ input.btn.btn-primary {
 }
 
 #results {
-  background-color: yellow;
   margin: 4px auto;
+}
+
+.track-artist {
+  margin: 2px auto;
 }
