got ajax api working where 20 results list on webpage

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,8 @@
 /* put custom styles in this file */
+
+h1 {
+  background: red;
+  border-style: dashed;
+  margin-bottom: 50px;
+  padding: 20px;
+}
