--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ img {
   font-weight: 600;
 }
 
+/*
 .button-preview {
   height: 30px;
   width: 90px;
@@ -55,6 +56,7 @@ img {
   background-color: rgb(255, 255, 255);
   color: black;
 }
+*/
 
 .no-results-msg {
   margin: 20px 0;
