--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,14 @@
 }
 
 .track-cont-inner-left {
-  height: 150px;
-  width: 150px;
+  height: 175px;
+  width: 175px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: relative;
 }
 
 .track-cont-inner-right {
-  height: 150px;
+  height: 175px;
   width: 400px;
   overflow: hidden;
   padding: 0 20px;
@@ -43,8 +45,16 @@
   padding: 10px 0 0 0;
 }
 
+.preview-button:focus {
+  background-color: white;
+}
+
 img {
-  max-width: 150px;
+  max-width: 175px;
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .track-text {
@@ -55,17 +65,6 @@ img {
 .track-name {
   font-weight: 600;
 }
-
-/*
-.button-preview {
-  height: 30px;
-  width: 90px;
-  border: 1px solid rgb(150, 150, 150);
-  border-radius: 5px;
-  background-color: rgb(255, 255, 255);
-  color: black;
-}
-*/
 
 .no-results-msg {
   margin: 20px 0;
@@ -78,4 +77,31 @@ img {
 
 .button-preview:focus {
   outline: 0;
+}
+
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.track-cont-inner-left:hover .track-image {
+  opacity: 0.3;
+}
+
+.track-cont-inner-left:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  font-family: "Helvetica", sans-serif;
+  color: black;
+  font-size: 16px;
+  padding: 16px 32px;
+  text-align: center;
 }
