--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,8 @@ img {
   outline: 0;
 }
 
-
 .middle {
-  transition: .5s ease;
+  transition: 1s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
