--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ input[type=submit]{
 
 }
 
+body {
+	background-color: rgb(218,215,215);
+}
+
 main{
 	margin: 0 2%;
 }
@@ -16,4 +20,24 @@ main{
 #result {
 	
 /*	height: 300px;*/
+}
+
+.card {
+/*	width: 300px;
+	height: 300px;*/
+	margin-bottom: 20px;
+}
+
+/*#results{
+	width: 100px;
+	height: 100px;
+	border: 10px solid black;
+}*/
+
+.col-4 {
+	height: auto;
+}
+
+audio{
+	width: 100%;
 }
