--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 form {
   text-align: center;
   margin: 15px;
+  display:block;
 }
 
 .container{
@@ -11,7 +12,11 @@ form {
 
 .container-fluid {
   padding: 10%;
+  text-align: center;
 }
-.col-lg-offset-4{
+.col-lg-offset-2{
   margin: 10%;
+}
+button {
+  margin-bottom: 10px;
 }
