--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
 /* put custom styles in this file */
+.col-sm-4{
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    min-height: 200px;
+    background-color: #5cb85c;
+}
+form{
+  margin-bottom: 10px;
+}
+h1{
+    color: white;
+}
+body{
+  background-color: black;
+}
+img{
+  border: 1 solid white;
+}
