--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
 /* put custom styles in this file */
+
+.track {
+  padding: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+h3 {
+  margin: 15px;
+}
+
+button {
+  margin: 15px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
