--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 #resTitle {
   text-transform: capitalize;
   margin-bottom: 30px;
+  color: rgb(238,238,238);
+  display: none;
 }
 .resShow {
   display: flex;
@@ -18,4 +20,21 @@
 }
 .resShow h2 {
   margin: 50px;
+}
+#results ul {
+  text-transform: capitalize;
+  margin-top: 10px;
+  list-style: none;
+}
+.resShow {
+  background: rgb(238,238,238);
+  padding: 30px;
+  border-radius: 6px;
+  margin-left: -30px;
+}
+.resShow img {
+  border-radius: 6px;
+}
+body {
+  background-color: black;
 }
