--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ a{
 }
 #results{
   background-color: #f0f0f0;
-  border:1px solid black;
+
   font-size: 20px;
   font-family: sans-serif;
   font-weight: 400;
@@ -12,7 +12,8 @@ a{
   text-align: center;
 }
 #search{
-
+background-color: #f0f0f0;
+padding: 10px;
 }
 h4{
   text-align: left;
@@ -22,4 +23,13 @@ h4{
 h3{
   text-decoration: underline;
   color: red;
+}
+p{
+  text-align: justify;
+}
+a{
+  font-style: italic;
+}
+body{
+  background-color: #e0e0e0;
 }
